--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,24 @@
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+body {
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+}
+
+h2 {
+    padding-left: 15px;
+}
+
+p {
+    padding-left: 15px;
+}
+
+input {
+    line-height: 50px;
+    vertical-align: middle;
+    width: 150px;
+    height: 25px;
 }
 #map {
-  height: 100%;
+    height: 100%;
 }
