--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,13 @@
-body {
-    height: 100vh;
-    width: 100vw;
-    margin: 0;
-    padding: 0;
+/** {
+  max-width: 1200px;
+  margin: auto;
+}
+
+html, body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+    background-color: rgb(200.200.200);
 }
 
 h2 {
@@ -11,14 +16,37 @@ h2 {
 
 p {
     padding-left: 15px;
+    font-size: 1em;
+}*/
+
+/*input {
+    padding-left: 15px;
+    height: 30px;
+    width: 250px;
 }
 
-input {
-    line-height: 50px;
-    vertical-align: middle;
-    width: 150px;
-    height: 25px;
-}
-#map {
+#list {
+    font-size: 1em;
     height: 100%;
+    width: 100%;
+    margin-top: 20px;
+}*/
+
+#list li:hover {
+    font-weight: bold;
+}
+
+#map_canvas {
+    display: block;
+    width: 100%;
+    height: 500px;
+}
+
+@media (max-width: @screen-xs-max) {
+
+    #map_canvas {
+        display: block;
+        width: 300px;
+        height: 400px;
+    }
 }
